--- a/HTML5AppLez04_Contatori/public_html/FORM/casellaTesto.html
+++ b/HTML5AppLez04_Contatori/public_html/FORM/casellaTesto.html
@@ -82,11 +82,21 @@ and open the template in the editor.
             <div>
                 <label for="sede">Sede</label>
                 <select id="sede">
-                    <option value="sede1">Cuneo</option>
-                    <option value="sede2">Torino</option>
-                    <option value="sede3">Vercelli</option>
-                    <option value="sede4">Novara</option>
-                    <option value="sede5">Asti</option>                    
+                    <optgroup label="Piemonte">
+                        <option value="sede1">Cuneo</option>
+                        <option value="sede2">Torino</option>
+                        <option value="sede3">Vercelli</option>
+                        <option value="sede4">Novara</option>
+                        <option value="sede5">Asti</option>
+                    </optgroup>
+                    <optgroup label="Lombardia">
+                        <option value="sede1">milano</option>
+                        <option value="sede2">brescia</option>
+                        <option value="sede3">bergamo</option>
+                        <option value="sede4">como</option>
+                        <option value="sede5">varese</option>
+                    </optgroup>
+                    
                 </select>               
             </div>
 
