--- a/tssLez08_Class/public_html/class.html
+++ b/tssLez08_Class/public_html/class.html
@@ -8,24 +8,19 @@ and open the template in the editor.
     <head>
         <title>Esempi di "CLASS"</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">       
+        <script src="js/objDefClass.js" type="text/javascript"></script>
         <script src="js/jsClass.js" type="text/javascript"></script>
     </head>
 
-    <body>
-        <div>Esempi di "Class"</div><br/>
-        <input id="in_nome" type="text" placeholder="ins.nome" value="">
-        <input id="in_code" type="number" placeholder="ins.codice" value="">
-        <input id="in_telefono" type="text" placeholder="ins.telefono" value="">
-        <div>
-            <label for="sesso_m">Maschio</label>
-            <input type="radio" name="sesso" id="sesso_m" value="m" title="maschio">
+    <body onload="init()">
+        <div id="d_ris"> </div><br/>
+        <div> Punti squadra di casa
+            <input id="in_pt1" type="number" >
+            Punti ospiti
+            <input id="in_pt2" type="number" ><br/><br/>
+            <button onclick="addRisultato()">Inserisci risultato</button>
         </div>
-        <div>
-            <label for="sesso_f">Femmina</label>
-            <input type="radio" name="sesso" id="sesso_f" value="f" title="femmina">
-        </div><br/>
-        <input type="button" value="CREA ANAGRAFICA" onclick="Anagrafica()"><br/><br/>
-
+        
     </body>
 </html>
